--- a/tNc.html
+++ b/tNc.html
@@ -6,15 +6,18 @@
     <title>Terms & Conditions</title>
     <style>
         body{
-            
+            display: flex;
             align-items: center;
             justify-content: center;
+            flex-direction: column;
+            
         }
     </style>
 </head>
 
 <body>
     <h1>"Financial & Market Risks are involved"</h1>
-    <h2>So, Deal Responsible</h2>
+    <h2>         So, Deal Responsible</h2>
+ <h3>_@Shankar_irla    </h3> 
 </body>
 </html>
