--- a/sell.html
+++ b/sell.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sell on Quickdealzz</title>
-    <link rel="stylesheet" href="sell.css">
+    <link rel="stylesheet" href="styles/sell.css">
 </head>
 <body>
     <header class="nav-bar">
