--- a/tNc.html
+++ b/tNc.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms & Conditions</title>
+    <link rel="stylesheet" href="style.css" />
     <style>
+
         body{
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            background: black;
             
+        }
+        h1{
+            color: azure;
         }
     </style>
 </head>
