--- a/electronics.html
+++ b/electronics.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Electronics - QuickDealzz</title>
-  <link rel="stylesheet" href="electronics.css">
+  <link rel="stylesheet" href="styles/electronics.css">
 </head>
 <body>
 
