--- a/vehicles.html
+++ b/vehicles.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vehicles - QuickDealzz</title>
-  <link rel="stylesheet" href="vehicles.css">
+  <link rel="stylesheet" href="styles/vehicles.css">
 </head>
 <body>
   <header>
