--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
             </div>
         </div>
     </section>
+    <button class="chat-button" onclick="alert('How can we help you?');">Chat Support</button>
+
 
     <footer>
         <p>&copy; 2025 Quickdealzz. All rights reserved.</p>
